--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <p>We are born to create</p>
             <div class="info">
                 <p class="label">Feel free to drop us a line at:</p>
-                <a href="mailto:leonagency@mail.com?subiect=alfooly" class="link">
+                <a href="mailto:mfwly111@mail.com?subiect=alfooly" class="link">
                     leonagency@mail.com</a>
                 <div class="social">
                     Find Us On Social Networks
