--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="info">
                 <p class="label">Feel free to drop us a line at:</p>
                 <a href="mailto:mfwly111@mail.com?subiect=alfooly" class="link">
-                    leonagency@mail.com</a>
+                    mfwly111@mail.com</a>
                 <div class="social">
                     Find Us On Social Networks
                     <i class="fa-brands fa-youtube"></i>
